[workspace]
resolver = "2"

members = [
  # services
  "services/*",
  # "services/search-index-lambda",
  #clients
  "native/native_rust_library",
  "keyserver/addons/rust-node-addon",
  "web/backup-client-wasm",
  # shared
  "shared/*",
]

exclude = [
  "services/electron-update-server",
  "services/scripts",
  "services/terraform",
  "services/node_modules",
  "shared/protos",
  "shared/cmake",
]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://comm.app"

[workspace.dependencies]
chrono = "0.4.38"
tokio = { version = "1.37" }

[profile.release.package.rust-node-addon]
# lto = true
