[workspace]
resolver = "2"

# We prefer the wildcard approach because it's easier to exclude 
# these from Dockerfiles with `sed`
members = [
  # All packages in these directories, except explicitly excluded
  "services/*",
  "shared/*",
  # Other packages
  "keyserver/addons/rust-node-addon",
]

exclude = [
  # These directories are not Rust services
  "services/electron-update-server",
  "services/terraform",
  "services/scripts",
  "services/node_modules",
  "shared/protos",
  "shared/cmake",
  # search-index-lambda has no common dependencies
  "services/search-index-lambda",
  # These fail to compile while in workspace
  "web/backup-client-wasm",
  "web/opaque-ke-wasm",
  "native/native_rust_library",
]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://comm.app"

[workspace.dependencies]
actix = "0.13.1"
actix-cors = "0.6"
actix-http = "3.4.0"
actix-multipart = "0.6"
actix-web = "4.3"
actix-web-actors = "4.2.0"
actix-web-httpauth = "0.8.0"
aead = "0.5"
aes-gcm = "0.10"
anyhow = "1.0.74"
argon2 = "0.4"
async-stream = "0.3.2"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
aws-sdk-s3 = "1.42.0"
aws-sdk-secretsmanager = "1.40.0"
base64 = "0.21.2"
bincode = "1.3.3"
bytes = "1.4"
bytesize = "1.1.0"
chrono = "0.4.38"
clap = "4.4"
derive_more = "0.99.17"
ed25519-dalek = "1"
futures = "0.3.30"
futures-core = "0.3"
futures-util = "0.3.28"
generic-array = "0.14.7"
hex = "0.4.3"
http = "0.2.9"
hyper = "0.14"
hyper-tungstenite = "0.11"
lapin = "2.2.1"
lazy_static = "1.4.0"
log = "0.4"
maud = "0.25"
napi = { version = "2.10.1", default-features = false }
napi-build = "2.0.1"
napi-derive = { version = "2.9.1", default-features = false }
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.13.1"
once_cell = "1.17"
opaque-ke = "2.1.0-pre.1"
postmark = "0.8"
prost = "0.11"
regex = "1.10.3"
reqwest = { version = "0.11.18", default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1"
sha2 = "0.10.2"
siwe = "0.6"
time = "0.3"
tokio = "1.37.0"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.18.0"
tokio-tungstenite-wasm = "0.2.1"
tonic = "0.8.3"
tonic-web = "0.9.1"
tower-http = "0.4"
tracing = "0.1.40"
tracing-actix-web = "0.7.3"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = "1.3"
wasm-bindgen = "0.2"
tower = "0.4"
