[package]
name = "native_rust_library"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.8"
prost = "0.11"
lazy_static = "1.4"
rand = "0.8"
opaque-ke = "1.2"
tracing = "0.1"
regex = "1.6"
comm-opaque2 = {path = "../../shared/comm-opaque2"}
derive_more = "0.99"

[build-dependencies]
cxx-build = "1.0"
tonic-build = "0.8"

[lib]
crate-type = ["staticlib"]
