[package]
name = "native_rust_library"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.1"
lazy_static = "1.4"
tracing = "0.1"
comm-opaque2 = {path = "../../shared/comm-opaque2"}
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.1"
grpc_clients = {path = "../../shared/grpc_clients"}

[build-dependencies]
cxx-build = "1.0"
regex = "1"

[lib]
crate-type = ["staticlib"]

[features]
android = []
