[package]
name = "native_rust_library"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
cxx = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.1"
lazy_static = "1.4"
tracing = "0.1"
comm-opaque2 = { path = "../../shared/comm-opaque2" }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
siwe = "0.3"
serde_json = "1.0"
argon2 = { version = "0.5.1", features = ["std"] }
grpc_clients = { path = "../../shared/grpc_clients" }
base64 = "0.21"
regex = "1.10.3"

[target.'cfg(target_os = "android")'.dependencies]
backup_client = { path = "../../shared/backup_client", default-features = false, features = [
  "rustls-tls-webpki-roots",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
backup_client = { path = "../../shared/backup_client", default-features = false, features = [
  "native-tls",
] }

[build-dependencies]
cxx-build = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib"]
