[package]
name = "vodozemac_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "=1.0.75"
vodozemac = { git = "https://github.com/CommE2E/vodozemac", features = ["libolm-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
anyhow = "1.0.97"
sha2 = "0.10"

[build-dependencies]
cxx-build = "=1.0.75"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib", "rlib"]