[package]
name = "backup"
version = "0.1.0"
description = "Backup service"
homepage = "https://comm.app"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
aws-config = "0.55"
aws-sdk-dynamodb = "0.27"
aws-types = "0.55"
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "http",
  "blob-client",
  "aws",
  "grpc_clients",
] }
once_cell = "1.17"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["v4"] }
actix-web = "4.3"
tracing-actix-web = "0.7.3"
reqwest = "0.11.18"
derive_more = "0.99"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
actix-web-actors = "4.2.0"
actix = "0.13.1"
actix-http = "3.4.0"
bincode = "1.3.3"
