[package]
name = "backup"
version = "0.1.0"
description = "Backup service"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "http",
  "blob-client",
  "aws",
  "grpc_clients",
  "crypto"
] }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
actix-web = { workspace = true }
tracing-actix-web = { workspace = true }
reqwest = { workspace = true }
derive_more = { workspace = true }
actix-multipart = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
actix-web-actors = { workspace = true }
actix = { workspace = true }
actix-http = { workspace = true }
bincode = { workspace = true }
