[package]
name = "blob"
description = "Blob service"
version = "1.0.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
actix-multipart = "0.6"
actix-web = "4.3"
anyhow = "1.0"
async-stream = "0.3"
aws-config = "0.55"
aws-sdk-dynamodb = "0.27"
aws-sdk-s3 = "0.27"
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "http",
  "aws",
  "grpc_clients",
] }
derive_more = "0.99"
http = "0.2"
once_cell = "1.17"
prost = "0.11"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7.3"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.95"
