[package]
name = "blob"
version = "1.0.0"
description = "Blob service"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
actix-multipart = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "http",
  "aws",
  "grpc_clients",
] }
derive_more = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = "0.8"
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
urlencoding = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
