[package]
name = "comm-services-lib"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[features]
blob-client = ["dep:reqwest", "dep:futures-core", "dep:futures-util"]
http = ["dep:actix-cors"]

[dependencies]
aws-config = "0.55"
aws-sdk-dynamodb = "0.27"
aws-types = "0.55"
base64 = "0.21"
chrono = "0.4"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = "1.24"
tracing = "0.1"
# blob client dependencies
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
  "stream",
], optional = true }
# http dependencies
actix-cors = { version = "0.6", optional = true }
