[package]
name = "comm-services-lib"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[features]
blob-client = [
  "dep:reqwest",
  "dep:futures-core",
  "dep:futures-util",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
]
http = [
  "dep:actix-cors",
  "dep:actix-web",
  "dep:actix-multipart",
  "dep:futures-core",
  "dep:futures-util",
  "dep:http",
  "dep:tokio-stream",
]

[dependencies]
aws-config = "0.55"
aws-sdk-dynamodb = "0.27"
aws-types = "0.55"
chrono = "0.4"
derive_more = "0.99"
tracing = "0.1"
anyhow = "1.0.74"
# blob client dependencies
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
  "stream",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.32", optional = true }
# http dependencies
actix-cors = { version = "0.6", optional = true }
actix-web = { version = "4.3", optional = true }
http = { version = "0.2.9", optional = true }
actix-multipart = { version = "0.6", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
