[package]
name = "commtest"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tonic = "0.8"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
futures = "0.1"
async-stream = "0.3.2"
derive_more = "0.99.16"
bytesize = "1.1.0"
lazy_static = "1.4.0"
num_cpus = "1.13.1"
sha2 = "0.10.2"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.8"
derive_more = "0.99.16"
