[package]
name = "commtest"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
comm-opaque2 = { path = "../../shared/comm-opaque2" }
tonic = "0.8"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
anyhow = "1.0"
base64 = "0.20"
openssl = "0.10"
futures = "0.1"
async-stream = "0.3.2"
derive_more = "0.99.16"
bytesize = "1.1.0"
lazy_static = "1.4.0"
num_cpus = "1.13.1"
sha2 = "0.10.2"
hex = "0.4.3"
tokio-tungstenite = "0.18.0"
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
url = "2.3.1"
futures-util = "0.3.28"
serde_json = "1.0.96"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = "1.0"
comm-services-lib = { path = "../comm-services-lib" }

[build-dependencies]
tonic-build = "0.8"
derive_more = "0.99.16"
