[package]
name = "commtest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
comm-opaque2 = { path = "../../shared/comm-opaque2" }
grpc_clients = { path = "../../shared/grpc_clients" }
backup_client = { path = "../../shared/backup_client" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
tonic = "0.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
prost = { workspace = true }
async-stream = { workspace = true }
derive_more = { workspace = true }
bytesize = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio-tungstenite = { workspace = true }
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
url = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
rand = "0.7.3"
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
serde = { workspace = true }
comm-lib = { path = "../../shared/comm-lib" }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"
