[package]
name = "feature-flags"
description = "Feature Flags service"
homepage = "https://comm.app"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
anyhow = "1.0"
aws-config = "0.54.0"
aws-types = "0.54.0"
aws-sdk-dynamodb = "0.24.0"
clap = { version = "4.0", features = ["derive", "env"] }
comm-services-lib = { path = "../comm-services-lib" }
http = "0.2"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
