[package]
name = "feature-flags"
version = "0.1.0"
description = "Feature Flags service"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
actix-web = "4.3"
anyhow = "1.0"
aws-config = "0.55"
aws-types = "0.55"
aws-sdk-dynamodb = "0.27"
clap = { version = "4.0", features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
] }
http = "0.2"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
