[package]
name = "feature-flags"
version = "0.1.0"
description = "Feature Flags service"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-types = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
] }
http = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
