[package]
name = "identity"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tonic = "0.9.1"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = "1"
clap = { version = "3.1.12", features = ["derive", "env"] }
derive_more = "0.99"
aws-config = "0.54.0"
aws-sdk-dynamodb = "0.24.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.19"
rand = "0.8"
constant_time_eq = "0.2.2"
siwe = "0.3"
comm-opaque2 = { path = "../../shared/comm-opaque2" }
grpc_clients = { path = "../../shared/grpc_clients" }
once_cell = "1.17"
hex = "0.4"
tonic-web = "0.9.1"
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
moka = { version = "0.10", features = ["future"] }
uuid = { version = "1.3", features = [ "v4" ] }
base64 = "0.21.2"

[build-dependencies]
tonic-build = "0.9.1"
