[package]
name = "identity"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tonic = "0.9.1"
prost = "0.11"
futures-util = "0.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek = "1"
clap = { version = "4.4", features = ["derive", "env"] }
derive_more = "0.99"
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono.workspace = true
rand = "0.8"
constant_time_eq = "0.2.2"
siwe = "0.3"
comm-opaque2 = { path = "../../shared/comm-opaque2" }
grpc_clients = { path = "../../shared/grpc_clients" }
hyper = "0.14"
hyper-tungstenite = "0.11"
once_cell = "1.17"
hex = "0.4"
tonic-web = "0.9.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
identity_search_messages = { path = "../../shared/identity_search_messages" }
uuid = { version = "1.3", features = ["v4"] }
base64 = "0.21.2"
regex = "1"
tower-http = { version = "0.4", features = ["cors"] }
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.30"
url = "2.5"

[build-dependencies]
tonic-build = "0.9.1"
